tests/fail/one_empty_line_between_param_and_return.php
<?php

class A
{
    /**
     * @param mixed $a
     * @return int
     */
    public function no_empty_line($a)
    {
        return 1;
    }

    /**
     * @param mixed $a
     *
     *
     * @return int
     */
    public function two_empty_lines($a)
    {
        return 1;
    }
}
